exclude household 6101 in 1.3 as it has only one data point

--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -452,7 +452,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime as dt \n",
-    "import copy\n",
     "from collections import namedtuple"
    ]
   },
@@ -475,6 +474,17 @@
     "hourly_reading['day'] = new_time[0]\n",
     "hourly_reading['time'] = new_time[1]\n",
     "hourly_reading.drop(columns = ['localminute'], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out all readings from household 6101 to show the\n",
+    "# insufficient information available for this household\n",
+    "print(hourly_reading.loc[hourly_reading.dataid == 6101])"
    ]
   },
   {
@@ -552,11 +562,15 @@
     "count = 0\n",
     "for i in corr.columns[:]:\n",
     "    temp_corr = corr.nlargest(5, i)\n",
-    "    for j in range (0, 5):\n",
-    "        top_corr.loc[count, 'HH1'] = i\n",
-    "        top_corr.loc[count, 'HH2'] = temp_corr.index[j]\n",
-    "        top_corr.loc[count, 'corr'] = temp_corr[i].iloc[j]\n",
-    "        count += 1\n",
+    "    \n",
+    "#     since household 6101 has very limited information (only one available datum)\n",
+    "#     it is discarded in the calculation of correlations between households\n",
+    "    if i != 6101:\n",
+    "        for j in range (0, 5):\n",
+    "            top_corr.loc[count, 'HH1'] = i\n",
+    "            top_corr.loc[count, 'HH2'] = temp_corr.index[j]\n",
+    "            top_corr.loc[count, 'corr'] = temp_corr[i].iloc[j]\n",
+    "            count += 1\n",
     "\n",
     "# export top_corr dataframe as csv file\n",
     "top_corr.to_csv('top_correlated_households.csv', index = False)"
