edit 1.3 and interim notebook, need to convert to PDF

--- a/Interim submission/4211_1.3.ipynb
+++ b/Interim submission/4211_1.3.ipynb
@@ -124,7 +124,7 @@
     "corr -= np.eye(corr.shape[0])\n",
     "\n",
     "# create a new dataframe with random values inserted\n",
-    "top_corr = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (5 * len(idList), 3)), columns = ['HH1', 'HH2', 'corr']).reset_index(drop = True)\n",
+    "top_corr = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (5 * (len(idList) - 1), 3)), columns = ['HH1', 'HH2', 'corr']).reset_index(drop = True)\n",
     "\n",
     "# set 'corr' column data type as float64\n",
     "# since correlation value is a floating point between 0 and 1\n",
