update of plottings

--- a/Interim submission/90°∞_Interim.ipynb
+++ b/Interim submission/90°∞_Interim.ipynb
@@ -239,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -275,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#preprocessing data for easier computation in the following: change datatype of 'localminute' to datetime\n",
@@ -292,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ind=0;\n",
@@ -354,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#concatenate the missing data with original data\n",
@@ -388,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp_gas_hr.to_csv('hourly_readings_final.csv',index=False);"
@@ -405,30 +415,41 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# gas_hr=temp_gas_hr;\n",
-    "# gas_hr=gas_hr[(gas_hr['localminute'].dt.year==2016)&(gas_hr['localminute'].dt.month==1)]\n",
-    "# mon=2;\n",
-    "# for _id in id_list:\n",
-    "#     mon=2;\n",
-    "#     temp_id_hr=gas_hr[gas_hr['dataid']==_id];\n",
-    "#     while(len(temp_id_hr)==0):\n",
-    "#         temp_id_hr=temp_gas_hr[(temp_gas_hr['localminute'].dt.year==2016)&(temp_gas_hr['localminute'].dt.month==mon)\n",
-    "#                               &(temp_gas_hr['dataid']==_id)];\n",
-    "#         mon=mon+1;\n",
-    "#     temp_id_hr=temp_id_hr.reset_index(drop=True);\n",
-    "#     t='Hourly reading of '+str(_id)+' of '+str(temp_id_hr.at[0,'localminute'].month)+' in '+str(temp_id_hr.at[0,'localminute'].year);\n",
-    "#     fig=plt.figure(figsize=(15,15));\n",
-    "#     plt.plot(temp_id_hr.localminute,temp_id_hr.meter_value);\n",
-    "#     plt.xlabel('date hr/(hr)');\n",
-    "#     plt.ylabel('meter_value'),\n",
-    "#     plt.title(t,loc='center');\n",
-    "#     plt.grid();\n",
-    "#     t_fig=t+'.png';\n",
-    "#     fig.savefig(t_fig);\n",
-    "#     plt.show();"
+    "#gas_hr=temp_gas_hr;\n",
+    "#gas_hr=gas_hr[(gas_hr['localminute'].dt.year==2016)&(gas_hr['localminute'].dt.month==1)]\n",
+    "#mon_inc=2;\n",
+    "#mon_dec=12;\n",
+    "#for _id in id_list:\n",
+    "#    mon_inc=2;\n",
+    "#    mon_dec=12;\n",
+    "#    temp_id_hr=gas_hr[gas_hr['dataid']==_id];\n",
+    "#    while(len(temp_id_hr)==0):\n",
+    "#        temp_id_hr=temp_gas_hr[temp_gas_hr['dataid']==_id];\n",
+    "#        temp_id_hr.reset_index(drop=True,inplace=True);\n",
+    "#        if((temp_id_hr.at[len(temp_id_hr)-1,'localminute'].year<2016)&(temp_id_hr.at[len(temp_id_hr)-1,'localminute'].month<=12)):\n",
+    "#            temp_id_hr=temp_gas_hr[(temp_gas_hr['localminute'].dt.year==2015)&(temp_gas_hr['localminute'].dt.month==mon_dec)\n",
+    "#                              &(temp_gas_hr['dataid']==_id)];\n",
+    "#            mon_dec=mon_dec-1;\n",
+    "#        else: \n",
+    "#            temp_id_hr=temp_gas_hr[(temp_gas_hr['localminute'].dt.year==2016)&(temp_gas_hr['localminute'].dt.month==mon_inc)\n",
+    "#                              &(temp_gas_hr['dataid']==_id)];\n",
+    "#            mon_inc=mon_inc+1;\n",
+    "#    temp_id_hr.reset_index(drop=True,inplace=True);\n",
+    "#    t='Hourly reading of '+str(_id)+' of '+str(temp_id_hr.at[0,'localminute'].month)+' in '+str(temp_id_hr.at[0,'localminute'].year);\n",
+    "#    fig=plt.figure(figsize=(15,15));\n",
+    "#    plt.plot(temp_id_hr.localminute,temp_id_hr.meter_value);\n",
+    "#    plt.xlabel('date hr/(hr)');\n",
+    "#    plt.ylabel('meter_value'),\n",
+    "#    plt.title(t,loc='center');\n",
+    "#    plt.grid();\n",
+    "#    t_fig=t+'.png';\n",
+    "#    fig.savefig(t_fig);\n",
+    "#    plt.show();"
    ]
   },
   {
@@ -446,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -458,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 1.3\n",
@@ -500,6 +525,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -528,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute the correlation matrix of the new dataframe\n",
@@ -549,7 +577,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# loop through all data ids in the correlation matrix\n",
@@ -626,7 +656,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -648,7 +680,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path = str(Path().resolve().parent)+'\\csv'\n",
@@ -676,7 +710,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Feature Extraction \n",
@@ -760,7 +796,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(path+\"/reading_features.csv\")\n",
@@ -918,21 +956,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
