add in cell comment

--- a/2nd and 3rd/4211_3.ipynb
+++ b/2nd and 3rd/4211_3.ipynb
@@ -122,6 +122,8 @@
     "    currentTime = row.time\n",
     "    hrs_diff = int(currentTime.split(\":\")[0][:2])\n",
     "    currentDay = row.day\n",
+    "    \n",
+    "    # For different days, we calculate their morning, noon and night consumption \n",
     "    if (currentDay != prevDay):\n",
     "        morningConsumption.append(currentMorning)\n",
     "        noonConsumption.append(currentNoon)\n",
@@ -132,7 +134,8 @@
     "        currentNoon = 0\n",
     "        currentNight = 0\n",
     "        currentElse = 0\n",
-    "        \n",
+    "    \n",
+    "    # For different ID, we append respective features to the list \n",
     "    if (currentID != row.dataid):\n",
     "        features = []\n",
     "        morningTotal = np.sum(morningConsumption)\n",
@@ -170,6 +173,7 @@
     "        totalConsumption = 0\n",
     "        currentID = row.dataid\n",
     "    \n",
+    "    # Feature calculation\n",
     "    totalConsumption = totalConsumption + int(row.consumption)\n",
     "    if (hrs_diff >= 6 and hrs_diff <= 9):\n",
     "        currentMorning = currentMorning + int(row.consumption)\n",
@@ -191,6 +195,7 @@
     "nightSTD = np.std(nightConsumption)\n",
     "features = []\n",
     "\n",
+    "# We append the last ID features\n",
     "features.append(currentID)\n",
     "features.append(totalConsumption)\n",
     "features.append(morningTotal)\n",
@@ -218,10 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Normalisation of feature values\n",
     "df = pd.read_csv(path+\"/reading_features.csv\")\n",
     "featureNames = [\"totalConsumption\", \"morningTotal\", \"noonTotal\", \"nightTotal\"]\n",
     "# featureNames = [\"totalConsumption\", \"morningMean\", \"noonMean\", \"nightMean\"]\n",
@@ -311,6 +317,7 @@
     }
    ],
    "source": [
+    "# We test on different cluster numbers: 2, 3, 4, 5 and 6\n",
     "range_n_clusters = [2, 3, 4, 5, 6]\n",
     "X= df_normalized.values\n",
     "\n",
@@ -446,6 +453,7 @@
     }
    ],
    "source": [
+    "# 2D Visualization of Data plots  \n",
     "fig, (ax3, ax4,ax5) = plt.subplots(1, 3)\n",
     "fig.set_size_inches(22, 7)\n",
     "\n",
@@ -483,6 +491,7 @@
     }
    ],
    "source": [
+    "# Combine all 4 feature into 2 feature sets\n",
     "pca = PCA(n_components=2).fit(df[featureNames])\n",
     "pca_2d = pca.transform(df[featureNames])\n",
     "for i in range(0, pca_2d.shape[0]):\n",
