add comment in 4211_3

--- a/Final submission/4211_3.ipynb
+++ b/Final submission/4211_3.ipynb
@@ -624,16 +624,19 @@
     }
    ],
    "source": [
+    "# calculate and output the original cost of natural gas consumed by all households based on the monthly price found in the website\n",
     "total_cost = 0\n",
     "for row in df.itertuples():\n",
     "    total_cost += (row.oct_consumption * monthly_price[0] + row.nov_consumption * monthly_price[1] + row.dec_consumption * monthly_price[2] + row.jan_consumption * monthly_price[3] + row.feb_consumption * monthly_price[4] + row.mar_consumption * monthly_price[5])\n",
     "print(\"Original cost of natural gas: %.2f dollars\" % (total_cost/1000))\n",
     "\n",
+    "# compute the average price\n",
     "total_consumption = 0\n",
     "for row in df.itertuples():\n",
     "    total_consumption += row.totalConsumption\n",
     "avg_price = total_cost / total_consumption\n",
     "\n",
+    "# set threshold values\n",
     "morningThreshold = 3000\n",
     "noonThreshold = 2400\n",
     "nightThreshold = 4200\n",
@@ -642,6 +645,7 @@
     "noonThreshold_2 = 1800\n",
     "nightThreshold_2 = 3000\n",
     "\n",
+    "# compute the new estimated cost after changing the pricing strategy\n",
     "total_adjusted_cost = 0\n",
     "for row in df.itertuples():\n",
     "    if (row.classification == 0):\n",
