--- a/Final submission/4211_3.ipynb
+++ b/Final submission/4211_3.ipynb
@@ -79,7 +79,7 @@
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import silhouette_samples, silhouette_score\n",
     "import matplotlib.cm as cm\n",
-    "from __future__ import print_function\n"
+    "from __future__ import print_function"
    ]
   },
   {
